<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shift Schedule Plus</string>
    <string name="app_name2">Shift Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="firebase">aHR0cHM6Ly90ZXN0LW5leHQtN2VhNDUtZGVmYXVsdC1ydGRiLmZpcmViYXNlaW8uY29tLw==</string>
    <string name="server_client_id">293885726954-i9g19qhiom1u0led81ov1fspsf5jfmh2.apps.googleusercontent.com</string>

    <string name="day_sh">Day</string>
    <string name="night_sh">Night</string>
    <string name="offday_sh">Offday</string>
    <string name="menu_home">Calendar</string>
    <string name="menu_gallery">Create</string>
    <string name="menu_slideshow">Shifts</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thurdsday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="start_work">From</string>
    <string name="end_work">Before</string>
    <string name="start_lanch">From</string>
    <string name="end_lanch">Before</string>
    <string name="color_picker">Select a color</string>
    <string name="name_shift">Shift name</string>
    <string name="day_off">Day off</string>
    <string name="add_shift">Add shift</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="choose_color">Choose a color</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="success_shift">Change changed successfully!</string>
    <string name="change_fragment">Switch schedule</string>

    <string name="info_shifts">There must be two or more shifts!</string>
    <string name="info_name_scheduke">Didnt specify the chart name!</string>
    <string name="schedule_succes">Selected!</string>
    <string name="juxtapose">Match</string>
    <string name="select_scheduls">Select schedules:</string>
    <string name="name_warning">The maximum size of the chart name is 15 characters!</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <string name="jux_war">You must select at least 1 chart!</string>
    <string name="statist">Statistics</string>
    <string name="name_schedule">Chart name</string>
    <string name="success">Changed!</string>
    <string name="splash">To get started, please log into your account to save all data :)</string>
    <string name="choose_backdround">Select calendar background</string>
    <string name="loading">Loading</string>
    <string name="loading_succes">Background changed!</string>
    <string name="settings_board">Calendar borders</string>
    <string name="settings_text_color">Text color</string>
    <string name="settings">Settings</string>
    <string name="settings_days_other">Show days of only one month</string>
    <string name="email_text">Write your suggestions here! :)</string>
    <string name="email_error">No email clients installed! :(</string>

    <string name="email_text_au">The application is designed to please all users :) If you find a bug or have suggestions for improvement, be sure to write to me. And in the next update we will do:)\n\n
     For cooperation, please also visit! Thank you!</string>
    <string name="warning_info">No graphs created yet!</string>
    <string name="settings_color_shift">Shift text color</string>
    <string name="create_warning">This change already exists!</string>


    <string name = "delete">Delete schedule</string>
    <string name = "delete_usually">Delete</string>
    <string name = "delete_success">Schedule deleted successfully!</string>
    <string name = "currect_date_start">Start of modified date</string>
    <string name = "currect_date_end">End modified date</string>
    <string name = "correct">Change</string>
    <string name = "correct_schedule">Change Schedule</string>
    <string name = "warn_correct">You must select two dates to change!</string>
    <string name = "warn_correct_date2">First, select the start date for changes</string>
    <string name = "error_date_correct">Date is out of chart!</string>
    <string name = "email">Feedback</string>
    <string name = "correct_success">Schedule changed successfully!</string>
    <string name = "delete_shift">Delete shift</string>
    <string name = "delete_success_shift">Change was successfully deleted!</string>
    <string name = "color_border">Border color</string>
    <string name = "size_text_shfift">Shift text size in the calendar</string>
    <string name = "small">small</string>
    <string name = "medium">medium</string>
    <string name = "big">big</string>

    <string name = "shift">Shift</string>
    <string name = "days">Days</string>

    <string name = "error_load">Oops, something went wrong. Please try again.</string>
    <string name = "repeat">Connect</string>
    <string name = "offline">Offline</string>
    <string name = "warning_offline">Editing is available online.</string>

    <string name="rate">Оценить приложение</string>
</resources>