<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splash">

    <fragment
        android:id="@+id/nav_home"
        android:name="test.next.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create"
        android:name="test.next.ui.create.CreateFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_shifts"
        android:name="test.next.ui.shifts.ShiftsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_shifts" />
    <fragment
        android:id="@+id/splash"
        android:name="test.next.ui.splash.Splash"
        android:label="splash_fragment"
        tools:layout="@layout/fragment_splash" />
    <fragment
        android:id="@+id/nav_change"
        android:name="test.next.ui.changes.ChangeFragment"
        android:label="@string/change_fragment"
        tools:layout="@layout/fragment_change" />
    <fragment
        android:id="@+id/nav_jextapose"
        android:name="test.next.ui.juxtapose.JuxtaposeFragment"
        android:label="@string/juxtapose" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="test.next.ui.statistics.StatisticsFragment"
        android:label="Статистика"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="test.next.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/nav_email"
        android:name="test.next.ui.email.EmailFragment"
        android:label="@string/email"
        tools:layout="@layout/fragment_email" />
</navigation>